--- a/templates/alumni-single.phtml
+++ b/templates/alumni-single.phtml
@@ -58,281 +58,289 @@
 			<div class="row">
 				<div class="col-lg-12">
 					<form action="<?=Helper::url('/api/v1/customer/'.$customer['id_customer'])?>" method="POST">
-						<fieldset>
-							<legend>Base Info</legend>
+						<div class="panel panel-default">
+							<div class="panel-heading">Base Info</div>
 							
-							<div class="row">
-								<!-- Col 1 -->
-								<div class="col-lg-6">
-									<div class="form-group">
-										<label>First Name</label>
-										<input type="text" class="form-control" id="first_name" name="first_name"
-											value = "<?=$customer['first_name'] ?>"
-										/>
-									</div>
-									<div class="form-group">
-										<label>Email</label>
-										<input type="text" class="form-control" id="email" name="email"
-											value = "<?=$customer['email'] ?>"
-										/>
-									</div>
-									<div class="form-group">
-										<label>Major</label>
-										<input type="text" class="form-control" id="major" name="major"
-											value = "<?=$customer['major'] ?>"
-										/>
-									</div>
-									<div class="form-group">
-										<label>Type</label>
-										<select name="type" class="form-control" id="type">
-											<option val="alumni"
-												<?php if ($customer['type'] == 'alumni') echo "selected"; ?>
-											>Alumni</option>
-											<option val="current"
-												<?php if ($customer['type'] == 'current') echo "selected"; ?>
-											>Current</option>
-										</select>
-									</div>
-									<div class="form-group">
-										<label>Preferred Mail Name</label>
-										<input type="text" class="form-control" id="preferred_mail_name" name="preferred_mail_name"
-											value = "<?=$customer['preferred_mail_name'] ?>"
-										/>
-									</div>
-									<div class="form-group">
-										<label>Home Street 1</label>
-										<input type="text" class="form-control" id="home_street_1" name="home_street_1"
-											value = "<?=$customer['home_street_1'] ?>"
-										/>
-									</div>
-									<div class="form-group">
-										<label>Home Street 2</label>
-										<input type="text" class="form-control" id="home_street_2" name="home_street_2"
-											value = "<?=$customer['home_street_2'] ?>"
-										/>
-									</div>
-									<div class="form-group">
-										<label>State</label>
-										<input type="text" class="form-control" id="state" name="state"
-											value = "<?=$customer['state'] ?>"
-										/>
-									</div>
-									<div class="form-group">
-										<label>Zipcode</label>
-										<input type="text" class="form-control" id="zipcode" name="zipcode"
-											value = "<?=$customer['zipcode'] ?>"
-										/>
-									</div>
+							<div class="panel-body">
+							
+								<div class="row">
+									<!-- Col 1 -->
+									<div class="col-lg-6">
+										<div class="form-group">
+											<label>First Name</label>
+											<input type="text" class="form-control" id="first_name" name="first_name"
+												value = "<?=$customer['first_name'] ?>"
+											/>
+										</div>
+										<div class="form-group">
+											<label>Email</label>
+											<input type="text" class="form-control" id="email" name="email"
+												value = "<?=$customer['email'] ?>"
+											/>
+										</div>
+										<div class="form-group">
+											<label>Major</label>
+											<input type="text" class="form-control" id="major" name="major"
+												value = "<?=$customer['major'] ?>"
+											/>
+										</div>
+										<div class="form-group">
+											<label>Type</label>
+											<select name="type" class="form-control" id="type">
+												<option val="alumni"
+													<?php if ($customer['type'] == 'alumni') echo "selected"; ?>
+												>Alumni</option>
+												<option val="current"
+													<?php if ($customer['type'] == 'current') echo "selected"; ?>
+												>Current</option>
+											</select>
+										</div>
+										<div class="form-group">
+											<label>Preferred Mail Name</label>
+											<input type="text" class="form-control" id="preferred_mail_name" name="preferred_mail_name"
+												value = "<?=$customer['preferred_mail_name'] ?>"
+											/>
+										</div>
+										<div class="form-group">
+											<label>Home Street 1</label>
+											<input type="text" class="form-control" id="home_street_1" name="home_street_1"
+												value = "<?=$customer['home_street_1'] ?>"
+											/>
+										</div>
+										<div class="form-group">
+											<label>Home Street 2</label>
+											<input type="text" class="form-control" id="home_street_2" name="home_street_2"
+												value = "<?=$customer['home_street_2'] ?>"
+											/>
+										</div>
+										<div class="form-group">
+											<label>State</label>
+											<input type="text" class="form-control" id="state" name="state"
+												value = "<?=$customer['state'] ?>"
+											/>
+										</div>
+										<div class="form-group">
+											<label>Zipcode</label>
+											<input type="text" class="form-control" id="zipcode" name="zipcode"
+												value = "<?=$customer['zipcode'] ?>"
+											/>
+										</div>
+										
+									</div> <!-- col-lg-6 -->
 									
-								</div> <!-- col-lg-6 -->
-								
-								<!-- Col 2 -->
-								<div class="col-lg-6">
-									<div class="form-group">
-										<label>Last Name</label>
-										<input type="text" class="form-control" id="last_name" name="last_name"
-											value = "<?=$customer['last_name'] ?>"
-										/>
-									</div>
-									<div class="form-group">
-										<label>Degree</label>
-										<input type="text" class="form-control" id="degree" name="degree"
-											value = "<?=$customer['degree'] ?>"
-										/>
-									</div>
-									<div class="form-group">
-										<label>School</label>
-										<input type="text" class="form-control" id="school" name="school"
-											value = "<?=$customer['school'] ?>"
-										/>
-									</div>
-									<div class="form-group">
-										<label>Salutation</label>
-										<input type="text" class="form-control" id="salutation" name="salutation"
-											value = "<?=$customer['salutation'] ?>"
-										/>
-									</div>
-									<div class="form-group">
-										<label>Active</label>
-										<input type="checkbox" class="form-control" id="active" name="active"
-											<?php if ($customer['active']) echo "checked"; ?>
-										/>
-									</div>
-									<div class="form-group">
-										<label>Country</label>
-										<input type="text" class="form-control" id="country" name="country"
-											value = "<?=$customer['country'] ?>"
-										/>
-									</div>
-									<div class="form-group">
-										<label>City</label>
-										<input type="text" class="form-control" id="city" name="city"
-											value = "<?=$customer['city'] ?>"
-										/>
-									</div>
-									<div class="form-group">
-										<label>Home Number</label>
-										<input type="text" class="form-control" id="home_number" name="home_number"
-											value = "<?=$customer['home_number'] ?>"
-										/>
-									</div>
-									<div class="form-group">
-										<label>Phone Number</label>
-										<input type="text" class="form-control" id="phone_number" name="phone_number"
-											value = "<?=$customer['phone_number'] ?>"
-										/>
-									</div>
-									
-								</div> <!-- col-lg-6 -->
-							</div> <!-- row -->
-							
-						</fieldset> <!-- base info -->
-					</form>
-					
-					<form action="<?=Helper::url('/api/v1/customer/'.$customer['id_customer'])/work ?>" method="POST">
-						<fieldset>
-							<legend>Work Info</legend>
-							
-							<div class="row">
-								
-							
-								<div class="col-lg-6">
-									<div class="form-group">
-										<h4>Add new work position</h4>
-									</div>
-								
-									<div class="form-group">
-										<label>Title</label>
-										<input type="text" class="form-control" id="work_title" name="title"
-											
-										/>
-									</div>
-									<div class="form-group">
-										<label>Address Line 1</label>
-										<input type="text" class="form-control" id="work_address_line1" name="address_line1"
-											
-										/>
-									</div>
-									<div class="form-group">
-										<label>Address Line 2</label>
-										<input type="text" class="form-control" id="work_address_line2" name="address_line2"
-											
-										/>
-									</div>
-									<div class="form-group">
-										<label>City</label>
-										<input type="text" class="form-control" id="work_city" name="city"
-											
-										/>
-									</div>
-									<div class="form-group">
-										<label>State</label>
-										<input type="text" class="form-control" id="work_state" name="state"
-											
-										/>
-									</div>
-									<div class="form-group">
-										<label>Country</label>
-										<input type="text" class="form-control" id="work_country" name="country"
-											
-										/>
-									</div>
-									<div class="form-group">
-										<label>Zipcode</label>
-										<input type="text" class="form-control" id="work_zipcode" name="zipcode"
-											
-										/>
-									</div>
-									<div class="form-group">
-										<label>Field</label>
-										<input type="text" class="form-control" id="work_field" name="field"
-											
-										/>
-									</div>
-									<div class="form-group">
-										<label>Date Start</label>
-										<input type="text" class="form-control" id="work_date_start" name="date_start"
-											
-										/>
-									</div>
-									<div class="form-group">
-										<label>Date End</label>
-										<input type="text" class="form-control" id="work_date_end" name="date_end"
-											
-										/>
-									</div>
-									<div class="form-group">
-										<button type="submit" class="btn btn-primary">Add position</button>
-									</div>
-								</div>
-								
-								<div class="col-lg-6">
-									<div class="form-group">
-										<h4>Work positions</h4>
-									</div>
-									
-									<ul class="list-group">
-										<?php if ($works->num_rows > 0): ?>
-										<?php while($work = $works->fetch_assoc()): ?>
-											<li class="list-group-item">
-												 <h4 class="list-group-item-heading"><?=$work['title']?></h4>
-												 <p class="list-group-item-text"><?=$work['date_end']?> - <?=$work['date_start']?></p>
-											</li>
-										<?php endwhile; ?>	
-										<?php endif; ?>
-									</ul>
-								</div>
+									<!-- Col 2 -->
+									<div class="col-lg-6">
+										<div class="form-group">
+											<label>Last Name</label>
+											<input type="text" class="form-control" id="last_name" name="last_name"
+												value = "<?=$customer['last_name'] ?>"
+											/>
+										</div>
+										<div class="form-group">
+											<label>Degree</label>
+											<input type="text" class="form-control" id="degree" name="degree"
+												value = "<?=$customer['degree'] ?>"
+											/>
+										</div>
+										<div class="form-group">
+											<label>School</label>
+											<input type="text" class="form-control" id="school" name="school"
+												value = "<?=$customer['school'] ?>"
+											/>
+										</div>
+										<div class="form-group">
+											<label>Salutation</label>
+											<input type="text" class="form-control" id="salutation" name="salutation"
+												value = "<?=$customer['salutation'] ?>"
+											/>
+										</div>
+										<div class="form-group">
+											<label>Active</label>
+											<input type="checkbox" class="form-control" id="active" name="active"
+												<?php if ($customer['active']) echo "checked"; ?>
+											/>
+										</div>
+										<div class="form-group">
+											<label>Country</label>
+											<input type="text" class="form-control" id="country" name="country"
+												value = "<?=$customer['country'] ?>"
+											/>
+										</div>
+										<div class="form-group">
+											<label>City</label>
+											<input type="text" class="form-control" id="city" name="city"
+												value = "<?=$customer['city'] ?>"
+											/>
+										</div>
+										<div class="form-group">
+											<label>Home Number</label>
+											<input type="text" class="form-control" id="home_number" name="home_number"
+												value = "<?=$customer['home_number'] ?>"
+											/>
+										</div>
+										<div class="form-group">
+											<label>Phone Number</label>
+											<input type="text" class="form-control" id="phone_number" name="phone_number"
+												value = "<?=$customer['phone_number'] ?>"
+											/>
+										</div>
+										
+									</div> <!-- col-lg-6 -->
+								</div> <!-- row -->
 								
 							</div>
 							
+						</div> <!-- base info -->
+					</form>
+					
+					<form action="<?=Helper::url('/api/v1/customer/'.$customer['id_customer']).'/work' ?>" method="POST">
+						<div class="panel panel-default">
+							<div class="panel-heading">Work Info</div>
 							
-						</fieldset>
+							<div class="panel-body">
+							
+								<div class="row">
+									<div class="col-lg-6">
+										<div class="form-group">
+											<h4>Add new work position</h4>
+										</div>
+									
+										<div class="form-group">
+											<label>Title</label>
+											<input type="text" class="form-control" id="work_title" name="title"
+												
+											/>
+										</div>
+										<div class="form-group">
+											<label>Address Line 1</label>
+											<input type="text" class="form-control" id="work_address_line1" name="address_line1"
+												
+											/>
+										</div>
+										<div class="form-group">
+											<label>Address Line 2</label>
+											<input type="text" class="form-control" id="work_address_line2" name="address_line2"
+												
+											/>
+										</div>
+										<div class="form-group">
+											<label>City</label>
+											<input type="text" class="form-control" id="work_city" name="city"
+												
+											/>
+										</div>
+										<div class="form-group">
+											<label>State</label>
+											<input type="text" class="form-control" id="work_state" name="state"
+												
+											/>
+										</div>
+										<div class="form-group">
+											<label>Country</label>
+											<input type="text" class="form-control" id="work_country" name="country"
+												
+											/>
+										</div>
+										<div class="form-group">
+											<label>Zipcode</label>
+											<input type="text" class="form-control" id="work_zipcode" name="zipcode"
+												
+											/>
+										</div>
+										<div class="form-group">
+											<label>Field</label>
+											<input type="text" class="form-control" id="work_field" name="field"
+												
+											/>
+										</div>
+										<div class="form-group">
+											<label>Date Start</label>
+											<input type="date" class="form-control" id="work_date_start" name="date_start"
+												
+											/>
+										</div>
+										<div class="form-group">
+											<label>Date End</label>
+											<input type="date" class="form-control" id="work_date_end" name="date_end"
+												
+											/>
+										</div>
+										<div class="form-group">
+											<button type="submit" class="btn btn-primary">Add position</button>
+										</div>
+									</div>
+									
+									<div class="col-lg-6">
+										<div class="form-group">
+											<h4>Work positions</h4>
+										</div>
+										
+										<ul class="list-group">
+											<?php if ($works->num_rows > 0): ?>
+											<?php while($work = $works->fetch_assoc()): ?>
+												<li class="list-group-item">
+													 <h4 class="list-group-item-heading"><?=$work['title']?></h4>
+													 <p class="list-group-item-text"><?=$work['date_end']?> - <?=$work['date_start']?></p>
+												</li>
+											<?php endwhile; ?>	
+											<?php endif; ?>
+										</ul>
+									</div>
+									
+								</div>
+							</div>
+								
+						</div>
 					</form>
 
 					
 					<form action="<?=Helper::url('/api/v1/customer/'.$customer['id_customer'])?>/note" method="POST">
-						<fieldset>
-							<legend>Notes</legend>
+						<div class="panel panel-default">
+							<div class="panel-heading">Notes</div>
+							
+							<div class="panel-body">
 
-							<div class="row">
-								<div class="col-lg-6">
-									<div class="form-group">
-										<label>New Note</label>
-										<textarea class="form-control" rows="5" name="note" placeholder="Add new note..."></textarea>
+								<div class="row">
+									<div class="col-lg-6">
+										<div class="form-group">
+											<label>New Note</label>
+											<textarea class="form-control" rows="5" name="note" placeholder="Add new note..."></textarea>
+										</div>
+										
+										<div class="form-group">
+											<input type="hidden" name="user_id" value="1" />
+										
+											<button type="submit" class="btn btn-primary">Add note</button>
+										</div>
 									</div>
 									
-									<div class="form-group">
-										<input type="hidden" name="user_id" value="1" />
-									
-										<button type="submit" class="btn btn-primary">Add note</button>
-									</div>
-								</div>
-								
-								<div class="col-lg-6">
-									<div class="form-group">
-										<label>Previous Notes</label>
-										<table class="table table-striped" id="data_table">
-										  <thead>
-											<tr>
-												<th>Created at</th>
-												<th>Note</th>
-											</tr>
-										  </thead>
-										  <tbody>
-											<?php if (isset($notes) && $notes->num_rows > 0): ?>
-											<?php while ($note=$notes->fetch_assoc()): ?>
+									<div class="col-lg-6">
+										<div class="form-group">
+											<label>Previous Notes</label>
+											<table class="table table-striped" id="data_table">
+											  <thead>
 												<tr>
-													<td><?=$note['created_at']?></td>
-													<td><?=$note['note']?></td>
+													<th>Created at</th>
+													<th>Note</th>
 												</tr>
-											<?php endwhile; ?>
-											<?php endif; ?>
-										  </tbody>
-										</table>
-									</div>
-								</div> <!-- col -->
-							</div> <!-- row -->
-						</fieldset>
+											  </thead>
+											  <tbody>
+												<?php if (isset($notes) && $notes->num_rows > 0): ?>
+												<?php while ($note=$notes->fetch_assoc()): ?>
+													<tr>
+														<td><?=$note['created_at']?></td>
+														<td><?=$note['note']?></td>
+													</tr>
+												<?php endwhile; ?>
+												<?php endif; ?>
+											  </tbody>
+											</table>
+										</div>
+									</div> <!-- col -->
+								</div> <!-- row -->
+							</div>
+								
+						</div>
 					</form>
 				</div>
 			</div>
