--- a/templates/alumni-single.phtml
+++ b/templates/alumni-single.phtml
@@ -79,61 +79,82 @@
 										<div class="form-group">
 											<label>First Name</label>
 											<input type="text" class="form-control" id="first_name" name="first_name"
-												value = "<?=$customer['first_name'] ?>"
+												value = "<?=$customer_latest['first_name'] ?>"
 											/>
 										</div>
 										<div class="form-group">
 											<label>Email</label>
 											<input type="text" class="form-control" id="email" name="email"
-												value = "<?=$customer['email'] ?>"
+												value = "<?=$customer_latest['email'] ?>"
 											/>
 										</div>
 										<div class="form-group">
 											<label>Major</label>
 											<input type="text" class="form-control" id="major" name="major"
-												value = "<?=$customer['major'] ?>"
+												value = "<?=$customer_latest['major'] ?>"
 											/>
+										</div>
+										<div class="form-group">
+											<label>Gender</label>
+											<select name="gender" class="form-control" id="gender">
+												<option value="male"
+													<?php if ($customer_latest['gender'] == 'male') echo "selected"; ?>
+												>male</option>
+												<option value="female"
+													<?php if ($customer_latest['gender'] == 'female') echo "selected"; ?>
+												>female</option>
+											</select>
 										</div>
 										<div class="form-group">
 											<label>Type</label>
 											<select name="type" class="form-control" id="type">
-												<option val="alumni"
-													<?php if ($customer['type'] == 'alumni') echo "selected"; ?>
-												>Alumni</option>
-												<option val="current"
-													<?php if ($customer['type'] == 'current') echo "selected"; ?>
-												>Current</option>
+												<option value="alumni"
+													<?php if ($customer_latest['type'] == 'alumni') echo "selected"; ?>
+												>alumni</option>
+												<option value="current"
+													<?php if ($customer_latest['type'] == 'current') echo "selected"; ?>
+												>current</option>
 											</select>
 										</div>
 										<div class="form-group">
 											<label>Preferred Mail Name</label>
 											<input type="text" class="form-control" id="preferred_mail_name" name="preferred_mail_name"
-												value = "<?=$customer['preferred_mail_name'] ?>"
+												value = "<?=$customer_latest['preferred_mail_name'] ?>"
 											/>
 										</div>
 										<div class="form-group">
 											<label>Home Street 1</label>
 											<input type="text" class="form-control" id="home_street_1" name="home_street_1"
-												value = "<?=$customer['home_street_1'] ?>"
+												value = "<?=$customer_latest['home_street_1'] ?>"
 											/>
 										</div>
 										<div class="form-group">
 											<label>Home Street 2</label>
 											<input type="text" class="form-control" id="home_street_2" name="home_street_2"
-												value = "<?=$customer['home_street_2'] ?>"
+												value = "<?=$customer_latest['home_street_2'] ?>"
 											/>
 										</div>
 										<div class="form-group">
 											<label>State</label>
 											<input type="text" class="form-control" id="state" name="state"
-												value = "<?=$customer['state'] ?>"
+												value = "<?=$customer_latest['state'] ?>"
 											/>
 										</div>
 										<div class="form-group">
 											<label>Zipcode</label>
 											<input type="text" class="form-control" id="zipcode" name="zipcode"
-												value = "<?=$customer['zipcode'] ?>"
+												value = "<?=$customer_latest['zipcode'] ?>"
 											/>
+										</div>
+										<div class="form-group">
+											<label>Major year start</label>
+											<input type="date" class="form-control" id="major_year_start" name="major_year_start"
+												value = "<?=$customer_latest['major_year_start'] ?>"
+											/>
+										</div>
+										
+										<div class="form-group">
+											<button class="btn btn-primary" type="submit">Update</button>
 										</div>
 										
 									</div> <!-- col-lg-6 -->
@@ -143,60 +164,73 @@
 										<div class="form-group">
 											<label>Last Name</label>
 											<input type="text" class="form-control" id="last_name" name="last_name"
-												value = "<?=$customer['last_name'] ?>"
+												value = "<?=$customer_latest['last_name'] ?>"
 											/>
 										</div>
 										<div class="form-group">
 											<label>Degree</label>
 											<input type="text" class="form-control" id="degree" name="degree"
-												value = "<?=$customer['degree'] ?>"
+												value = "<?=$customer_latest['degree'] ?>"
 											/>
 										</div>
 										<div class="form-group">
 											<label>School</label>
 											<input type="text" class="form-control" id="school" name="school"
-												value = "<?=$customer['school'] ?>"
+												value = "<?=$customer_latest['school'] ?>"
+											/>
+										</div>
+										<div class="form-group">
+											<label>Birthday</label>
+											<input type="date" class="form-control" id="birthday" name="birthday"
+												value = "<?=$customer_latest['birthday'] ?>"
 											/>
 										</div>
 										<div class="form-group">
 											<label>Salutation</label>
 											<input type="text" class="form-control" id="salutation" name="salutation"
-												value = "<?=$customer['salutation'] ?>"
+												value = "<?=$customer_latest['salutation'] ?>"
 											/>
 										</div>
 										<div class="form-group">
 											<label>Active</label>
 											<input type="checkbox" class="form-control" id="active" name="active"
-												<?php if ($customer['active']) echo "checked"; ?>
+												<?php if ($customer_latest['active']) echo "checked"; ?>
 											/>
 										</div>
 										<div class="form-group">
 											<label>Country</label>
 											<input type="text" class="form-control" id="country" name="country"
-												value = "<?=$customer['country'] ?>"
+												value = "<?=$customer_latest['country'] ?>"
 											/>
 										</div>
 										<div class="form-group">
 											<label>City</label>
 											<input type="text" class="form-control" id="city" name="city"
-												value = "<?=$customer['city'] ?>"
+												value = "<?=$customer_latest['city'] ?>"
 											/>
 										</div>
 										<div class="form-group">
 											<label>Home Number</label>
 											<input type="text" class="form-control" id="home_number" name="home_number"
-												value = "<?=$customer['home_number'] ?>"
+												value = "<?=$customer_latest['home_number'] ?>"
 											/>
 										</div>
 										<div class="form-group">
 											<label>Phone Number</label>
 											<input type="text" class="form-control" id="phone_number" name="phone_number"
-												value = "<?=$customer['phone_number'] ?>"
+												value = "<?=$customer_latest['phone_number'] ?>"
+											/>
+										</div>
+										<div class="form-group">
+											<label>Major year end</label>
+											<input type="date" class="form-control" id="major_year_end" name="major_year_end"
+												value = "<?=$customer_latest['major_year_end'] ?>"
 											/>
 										</div>
 										
 									</div> <!-- col-lg-6 -->
 								</div> <!-- row -->
+								
 								
 							</div>
 							
